feat: add endpoint to retrieve total number of books in the system
